--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -1,2 +1,5 @@
-Yoyoyoyoy
-<%= @oueoue %>
+<div class="container mx-auto">
+  <center><h1>How good is your Spotify ?</h1></center>
+  <%= @top_tracks_raw %>
+<!--   <%= @top_artists %> -->
+</div>
