--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -1,5 +1,5 @@
-<div class="container mx-auto">
-  <center><h1>How good is your Spotify ?</h1></center>
+<div class="container mx-auto p-10 typewriter">
+  <center><h1>A quel point ton Spotify est chouette ?</h1></center>
   <%= @top_tracks_raw %>
 <!--   <%= @top_artists %> -->
 </div>
