--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="container mx-auto">
-  <h1>Pages#home</h1>
+<div class="container mx-auto pt-10 typewriter">
+  <h1 class="">> Salut ! Tu veux découvrir tout ce qu'il y a de bien sur ton Spotify?</h1>
   <p>Find me in app/views/pages/home.html.erb</p>
 
   <%= link_to 'Sign in with Spotify', '/auth/spotify' %>
