--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -1,7 +1,7 @@
 <div class="container mx-auto p-10 typewriter">
   <center><h1>A quel point ton Spotify est chouette ?</h1></center>
 
-  <h2>Ohhh !</h2>
+  <h2>Ohhhhh !</h2>
   <h2>Mais tu écoutes aussi <%= @top_artists.sample.name %> ?? Franchement, trop bon goût, c'est archi cool jtrouve!</h2>
 <br>
   <% this = @top_artists.sample %>
