--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -4,9 +4,12 @@
   <h2>Tu n'as aucune musique sur ton Spotify, n'hésite pas à plus l'utiliser !</h2>
 <% else %>
   <h2>Ohhhhh !</h2>
-  <h2>Mais tu écoutes aussi <%= @top_artists.sample.name %> ?? Franchement, trop bon goût, c'est archi cool jtrouve!</h2>
+  <% thas = @top_artists.sample %>
+  <% delete_element(@top_artists, thas) %>
+  <h2>Mais tu écoutes aussi <%= thas.name %> ?? Franchement, trop bon goût, c'est archi cool jtrouve!</h2>
 <br>
   <% this = @top_artists.sample %>
+  <% delete_element(@top_artists, this) %>
   <h2>Entre nous, <%= this.name %>, c'est la meilleure musique <%= this.genres[0] %> du monde, nan ?</h2>
 <br>
   <% that = @top_tracks.sample %>
