jquery pas vraiment mais typed.js yesyes home trop belle avec btn stylé

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
-<div class="container mx-auto pt-10 typewriter">
-  <h1 class="">> Salut ! Tu veux découvrir tout ce qu'il y a de bien sur ton Spotify?</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
-
-  <%= link_to 'Sign in with Spotify', '/auth/spotify' %>
+<div class="container my-40 text-center">
+  <span id="typed"></span>
+  <div id="btn-spotify" class="hidden btn rounded w-96 mx-auto">
+    <a class="text-green" href="/auth/spotify"><i class="fab fa-spotify text-xl"></i> Connecte toi à Spotify bg</a>
+  </div>
 </div>
+
+
+
