--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -3,7 +3,7 @@
 <% if @top_artists.empty? %>
   <h2>Tu n'as aucune musique sur ton Spotify, n'hésite pas à plus l'utiliser !</h2>
 <% else %>
-  <h2>Ohhhhh !</h2>
+<!--   <h2>Ohhhhh !</h2>
   <% thas = @top_artists.sample %>
   <% delete_element(@top_artists, thas) %>
   <h2>Mais tu écoutes aussi <%= thas.name %> ?? Franchement, trop bon goût, c'est archi cool jtrouve!</h2>
@@ -17,18 +17,9 @@
 <br>
   <% thot = @top_tracks.sample %>
   <h2>Je vois que tu es fin.e connaisseur.se de <%= thot.artists[0].genres[0] %> héhé</h2>
-  <h2>Comment tu as découvert <%= thot.artists[0].name %> ?</h2>
-<br>
-  <h2>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule ?</h2>
-  <h2>Qu'est-ce que tu as découvert en preums ?</h2>
-    <% jeu1 = @top_tracks[12] %>
-  <li><%= jeu1.name %><img src="<%= jeu1.album.images[2]["url"] %>">  OU   <%= jeu1.artists[0].name %> <img src="<%= jeu1.artists[0].images.last["url"] %>"></li>
-    <% jeu2 = @top_tracks[7] %>
-  <li><%= jeu2.name %><img src="<%= jeu2.album.images[2]["url"] %>">  OU   <%= jeu2.artists[0].name %> <img src="<%= jeu2.artists[0].images.last["url"] %>"></li>
-    <% jeu3 = @top_tracks[18] %>
-  <li><%= jeu3.name %><img src="<%= jeu3.album.images[2]["url"] %>">  OU   <%= jeu3.artists[0].name %> <img src="<%= jeu3.artists[0].images.last["url"] %>"></li>
-<br>
-  <% recently = @recently_played.sample %>
+  <h2>Comment tu as découvert <%= thot.artists[0].name %> ?</h2> -->
+<%= render 'shared/game' %>
+<!--   <% recently = @recently_played.sample %>
   <h2>C'est marrant que t'écoutes <%= recently.name %> !</h2>
   <h2>J'écoutais justement un peu de <%= recently.artists[0].genres[0] %> !</h2>
 <br>
@@ -42,7 +33,7 @@
   <% if @original_complex < 51 %>
   <h2>Whawww je suis bluffé !</h2>
   <h2>Ton Spotify est composé à <%= (100 - @original_complex) %>% de contenu original !</h2>
-  <h2>Où trouves-tu toute cette inspiration ? J'espère que tu fais tourner à tes proches...</h2>
+  <h2>Où trouves-tu toute cette inspiration ? J'espère que tu fais tourner à tes proches...</h2> -->
   <% end %>
 <br>
 
