plus rapide le typewriter

--- a/app/views/shared/_game.html.erb
+++ b/app/views/shared/_game.html.erb
@@ -1,7 +1,7 @@
 <br>
 
-  <h2>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule ?</h2>
-  <h2>Qu'est-ce que tu as découvert en preums ?</h2>
+  <h2>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule... ?</h2>
+  <h2>Sélectionne ce que tu as découvert en preum : le son ou l'artiste ?</h2>
   <% jeu1 = @top_tracks[12] %>
   <div class="flex justify-end">
     <div class="flex justify-between w-2/5">
