visuel du jeu validé

--- a/app/views/shared/_game.html.erb
+++ b/app/views/shared/_game.html.erb
@@ -1,104 +1,58 @@
-<% if @top_tracks == nil %>
-<br>
-
-  <h2>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule ?</h2>
-  <h2>Qu'est-ce que tu as découvert en preums ?</h2>
-  <div class="flex justify-end">
-    <div class="flex justify-between w-2/5">
-      <div id="toggle_pick1a" class="flex flex-col items-center hvr-skew-forward p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-        <p>Il changeait la vie</p>
-        <%=image_tag("Album1.jpeg", class:"rounded-lg h-20") %>
-      </div>
-      <div class="flex flex-col items-center justify-center">
-        <p>OU</p>
-      </div>
-      <div id="toggle_pick1b" class="flex flex-col items-center hvr-skew-backward p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-        <p>Jean Jacques Goldman</p>
-        <%=image_tag("Artist1.jpeg", class:"rounded-lg h-20") %>
-      </div>
+<p>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule ?</p>
+<p>Qu'est-ce que tu as découvert en preums ?</p>
+<% jeu1 = @top_tracks[12] %>
+<div class="flex justify-end">
+  <div class="flex justify-between w-2/5">
+    <div id="toggle_pick1a" class="flex flex-col items-center hvr-skew-forward p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+      <p><%= jeu1.name %></p>
+      <img src="<%= jeu1.album.images[2]["url"] %>" class="rounded-lg h-20">
+    </div>
+    <div class="flex flex-col items-center justify-center">
+      <p>OU</p>
+    </div>
+    <div id="toggle_pick1b" class="flex flex-col items-center hvr-skew-backward p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+      <p><%= jeu1.artists[0].name %></p>
+      <img src="<%= jeu1.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
   </div>
+</div>
 
-  <h2>Forcémeeeeent hahah </h2>
-  <h2>Encore ! </h2>
-  <div class="flex justify-end">
-    <div class="flex justify-between w-2/5">
-      <div id="toggle_pick2a" class="flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-        <p>Fever</p>
-        <%=image_tag("Album2.jpeg", class:"rounded-lg h-20") %>
-      </div>
-      <div class="flex flex-col items-center justify-center">
-        <p>OU</p>
-      </div>
-      <div id="toggle_pick2b" class="flex flex-col items-center hvr-wobble-top border-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-        <p>Dua Lipa</p>
-        <%=image_tag("Artist2.jpeg", class:"rounded-lg h-20") %>
-      </div>
+<p>Forcémeeeeent hahah </p>
+<p>Encore ! </p>
+<% jeu2 = @top_tracks[7] %>
+<div class="flex justify-end">
+  <div class="flex justify-between w-2/5">
+    <div id="toggle_pick2a" class="flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+      <p><%= jeu2.name %></p>
+      <img src="<%= jeu2.album.images[2]["url"] %>" class="rounded-lg h-20">
+    </div>
+    <div class="flex flex-col items-center justify-center">
+      <p>OU</p>
+    </div>
+    <div id="toggle_pick2b" class="flex flex-col items-center hvr-wobble-top border-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+      <p><%= jeu2.artists[0].name %></p>
+      <img src="<%= jeu2.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
   </div>
+</div>
 
-<% else %>
-  <!-- <br>
-
-  <h2>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule ?</h2>
-  <h2>Qu'est-ce que tu as découvert en preums ?</h2>
-  <% jeu1 = @top_tracks[12] %>
-  <div class="flex justify-end">
-    <div class="flex justify-between w-2/5">
-      <div id="toggle_pick1a" class="flex flex-col items-center hvr-skew-forward p-2 border-2 border-black border-opacity-0 rounded-lg">
-        <p><%= jeu1.name %></p>
-        <img src="<%= jeu1.album.images[2]["url"] %>" class="rounded-lg h-20">
-      </div>
-      <div class="flex flex-col items-center justify-center">
-        <p>OU</p>
-      </div>
-      <div id="toggle_pick1b" class="flex flex-col items-center hvr-skew-backward p-2 border-2 border-black border-opacity-0 rounded-lg">
-        <p><%= jeu1.artists[0].name %></p>
-        <img src="<%= jeu1.artists[0].images.last["url"] %>" class="rounded-lg h-20">
-      </div>
+<p>Ah ben tiens ! Tout pareil héhé </p>
+<p>Un ptit dernier pour la route !</p>
+<% jeu3 = @top_tracks[18] %>
+<div class="flex justify-end">
+  <div class="flex justify-between w-2/5">
+    <div id="toggle_pick3a" class="flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+      <p><%= jeu3.name %></p>
+      <img src="<%= jeu3.album.images[2]["url"] %>" class="rounded-lg h-20">
+    </div>
+    <div class="flex flex-col items-center justify-center">
+      <p>OU</p>
+    </div>
+    <div id="toggle_pick3b" class="flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+      <p><%= jeu3.artists[0].name %></p>
+      <img src="<%= jeu3.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
   </div>
+</div>
 
-  <h2>Forcémeeeeent hahah </h2>
-  <h2>Encore ! </h2>
-  <% jeu2 = @top_tracks[7] %>
-  <div class="flex justify-end">
-    <div class="flex justify-between w-2/5">
-      <div id="toggle_pick2a" class="flex flex-col items-center hvr-wobble-top p-2 border-2 border-black border-opacity-0 rounded-lg">
-        <p><%= jeu2.name %></p>
-        <img src="<%= jeu2.album.images[2]["url"] %>" class="rounded-lg h-20">
-      </div>
-      <div class="flex flex-col items-center justify-center">
-        <p>OU</p>
-      </div>
-      <div id="toggle_pick2b" class="flex flex-col items-center hvr-wobble-top border-2 p-2 border-black border-opacity-0 rounded-lg">
-        <p><%= jeu2.artists[0].name %></p>
-        <img src="<%= jeu2.artists[0].images.last["url"] %>" class="rounded-lg h-20">
-      </div>
-    </div>
-  </div>
-
-  <h2>Ah ben tiens ! Tout pareil héhé </h2>
-  <h2>Un ptit dernier pour la route !</h2>
-  <% jeu3 = @top_tracks[18] %>
-  <div class="flex justify-end">
-    <div class="flex justify-between w-2/5">
-      <div id="toggle_pick3a" class="flex flex-col items-center hvr-buzz-out p-2 border-2 border-black border-opacity-0 rounded-lg">
-        <p><%= jeu3.name %></p>
-        <img src="<%= jeu3.album.images[2]["url"] %>" class="rounded-lg h-20">
-      </div>
-      <div class="flex flex-col items-center justify-center">
-        <p>OU</p>
-      </div>
-      <div id="toggle_pick3b" class="flex flex-col items-center hvr-buzz-out p-2 border-2 border-black border-opacity-0 rounded-lg">
-        <p><%= jeu3.artists[0].name %></p>
-        <img src="<%= jeu3.artists[0].images.last["url"] %>" class="rounded-lg h-20">
-      </div>
-    </div>
-  </div>
-
-  <h2>Bien joué bg ! </h2>
-<br>
- -->
-
- <% end %>
+<p>Bien joué bg ! </p>
