--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -2,12 +2,10 @@
 
 <section>
   <h1>Tu veux savoir à quel point ton Spotify est chouette ?</h1>
-  <h2>C'est le moment de le découvrir</h2>
   <p>Attends un poil, que j'analyse un peu tout ça</p>
   <p>...</p>
-  <p>Tiens, pour passer le temps, je me présente :</p>
-  <p>Je suis un petit programme d'IA et j'ai pour unique but de mettre un peu de douceur dans ta journée.</p>
-  <p>Ça y est, j'ai fini !</p>
+  <p>Je suis un petit programme d'IA</p>
+  <p>j'ai pour unique but de mettre un peu de douceur dans ta journée</p>
   <p>Mais <strong>avant toute chose</strong>, dis moi</p>
   <p>Comment vas tu <strong>vraiment</strong>, là tout de suite ?</p>
   <div class="flex justify-end">
@@ -33,19 +31,20 @@
     <p>Mais nan haha</p>
     <% thas = @top_artists.sample %>
     <% delete_element(@top_artists, thas) %>
-    <p>Tu écoutes aussi <strong><%= thas.name %></strong> ?? Franchement, c'est archi cool jtrouve!</p>
+    <p>Tu écoutes aussi <strong><%= thas.name %></strong> ??</p>
+    <p>Franchement, c'est archi cool je trouve!</p>
   <br>
     <% this = @top_artists.sample %>
     <% delete_element(@top_artists, this) %>
-    <p>Ah ben voilà toi aussi !</p>
     <p>Entre nous, <strong><%= this.name %></strong>, c'est la meilleure musique <%= this.genres[0] %> du monde, nan ?</p>
   <br>
     <% that = @top_tracks.sample %>
-    <p>Alleeeez ! <em><%= that.album.name %></em> de <strong><%= that.album.artists[0].name %></strong>, clairement meilleur album de <%= that.album.release_date.slice(0..3) %> !</p>
+    <p>Alleeeez !</p>
+    <p><em><%= that.album.name %></em> de <strong><%= that.album.artists[0].name %></strong>, clairement meilleur album de <%= that.album.release_date.slice(0..3) %> !</p>
   <br>
     <% thot = @top_tracks.sample %>
     <p>Ah, je te reconnais bien là</p>
-    <p>Je vois que tu es fin.e connaisseur.se de <%= thot.artists[0].genres[0] %> héhé</p>
+    <p>Fin.e connaisseur.se de <%= thot.artists[0].genres[0] %> héhé</p>
     <p>Comment tu as découvert <strong><%= thot.artists[0].name %></strong> ?</p>
   </section>
 
@@ -57,7 +56,7 @@
     <p>J'écoutais justement un peu de <%= recently.artists[0].genres[0] %> !</p>
   <br>
     <p>T'as déjà écouté <%= @most_underground[3].name %> ?</p>
-    <p>Who, pourtant y'en a pas grand monde qui connait ! Et seuls quelques happy few s'ambiancent dessus !</p>
+    <p>Who, pourtant y'en a pas grand monde qui connait !</p>
     <p>Bravo pour ton ouverture d'oreille 🤗</p>
   <br>
     <p>Au vu de ce que tu écoutes, tu retournerai bien en <%= @stuck_years %> ! </p>
@@ -67,7 +66,8 @@
       <p>Whawww je suis bluffé !</p>
       <p>Ton Spotify est composé à <%= (100 - @original_complex) %>% de contenu original !</p>
       <p>Bravo!</p>
-      <p>Où trouves-tu toute cette inspiration ? J'espère que tu fais tourner à tes proches...</p>
+      <p>Où trouves-tu toute cette inspiration ?</p>
+      <p>J'espère que tu partages tes découvertes ! </p>
     <% end %>
   <br>
   </section>
