--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -4,21 +4,21 @@
       <h1>Tu veux savoir à quel point ton Spotify est chouette ?</h1>
       <p>Attends un poil, que j'analyse un peu tout ça</p>
       <p>Je suis un petit programme d'IA</p>
-      <p>J'ai pour unique but de mettre un peu de douceur dans ta journée</p>
+      <p>J'ai pour unique but de mettre un peu de <span class="text-lavander font-bold">douceur</span> dans ta journée</p>
     <br>
       <p>Mais <strong>avant toute chose</strong>, dis moi</p>
       <p>Comment vas tu <strong>vraiment</strong>, là tout de suite ?</p>
     </div>
-      <div class="flex justify-end">
-        <div class="flex justify-between w-2/5">
-          <div id="toggle_pick0a" class="flex hidden flex-col items-center p-2 border-2 border-black border-opacity-70 rounded-lg">
-            <p>Au top du pop</p>
-          </div>
-          <div id="toggle_pick0b" class="flex hidden flex-col items-center p-2 border-2 border-black border-opacity-70 rounded-lg">
-            <p>Bah.. pas si ouf</p>
-          </div>
+    <div class="flex justify-end">
+      <div class="flex justify-between w-2/5">
+        <div id="toggle_pick0a" class="hidden flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+          <p>Au top du pop</p>
+        </div>
+        <div id="toggle_pick0b" class="hidden flex flex-col items-center hvr-wobble-top border-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+          <p>Bah.. pas si ouf</p>
         </div>
       </div>
+    </div>
 
   </section>
 
@@ -33,24 +33,24 @@
       <p>Mais nan haha</p>
       <% thas = @top_artists.sample %>
       <% delete_element(@top_artists, thas) %>
-      <p>Tu écoutes aussi <strong><%= thas.name %></strong> ??</p>
+      <p>Tu écoutes aussi <span class="text-lilac font-bold"><%= thas.name %></span> ??</p>
       <p>Franchement, c'est archi cool je trouve!</p>
     <br>
       <% this = @top_artists.sample %>
       <% delete_element(@top_artists, this) %>
-      <p>Entre nous, <strong><%= this.name %></strong>, meilleure musique <%= this.genres[0] %> du monde, nan ?</p>
+      <p>Et <span class="text-peach font-bold"><%= this.name %></span>, meilleure musique <em><%= this.genres[0] %></em> du monde, nan ?</p>
     <br>
       <% that = @top_tracks.sample %>
       <p>Alleeeez !</p>
-      <p>En vrai, <em><%= that.album.name %></em> de <strong><%= that.album.artists[0].name %></strong>, best album de <%= that.album.release_date.slice(0..3) %> !</p>
+      <p>Entre nous, <em><%= that.album.name %></em> de <span class="text-coral font-bold"><%= that.album.artists[0].name %></span>, best album de <%= that.album.release_date.slice(0..3) %> !</p>
     <br>
       <% thot = @top_tracks.sample %>
       <p>Ah, je te reconnais bien là</p>
-      <p>Fin.e connaisseur.se de <%= thot.artists[0].genres[0] %> héhé</p>
-      <p>Comment tu as découvert <strong><%= thot.artists[0].name %></strong> ?</p>
+      <p>Fin.e connaisseur.se de <em><%= thot.artists[0].genres[0] %></em> héhé</p>
+      <p>Comment tu as découvert <span class="text-apricot font-bold"><%= thot.artists[0].name %></span> ?</p>
     <br>
       <h2>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule ?</h2>
-      <p>Qu'est-ce que tu as découvert en preums ?</p>
+      <p>Qu'est-ce que tu as découvert en premier ?</p>
     </section>
 
 
@@ -60,21 +60,21 @@
     <p>Bien joué bg ! </p>
   <br>
     <% recently = @recently_played.sample %>
-    <p>C'est marrant que t'écoutes <%= recently.name %> !</p>
+    <p>C'est marrant que t'écoutes <em><%= recently.name %></em> !</p>
     <p>J'écoutais justement un peu de <%= recently.artists[0].genres[0] %> !</p>
   <br>
-    <p>T'as déjà écouté <%= @most_underground[3].name %> ?</p>
+    <p>T'as déjà écouté <span class="text-pea font-bold"><%= @most_underground[3].name %></span> ?</p>
     <p>Who, pourtant y'en a pas grand monde qui connait !</p>
     <p>Bravo pour ton ouverture d'oreille 🤗</p>
   <br>
     <p>Au vu de ce que tu écoutes, tu retournerai bien en <%= @stuck_years %> ! </p>
-    <p>Tu m'étonnes, y'a quand même eu l'album de <%= @stuck_years_artist %> </p>
+    <p>Tu m'étonnes, y'a quand même eu l'album de <span class="text-baby-blue"><%= @stuck_years_artist %></span> </p>
   <br>
     <% if @original_complex < 51 %>
       <p>Whawww je suis bluffé !</p>
-      <p>Ton Spotify est composé à <%= (100 - @original_complex) %>% de contenu original !</p>
+      <p>Ton Spotify est composé à <%= (100 - @original_complex) %>% de contenu <span class="text-lavander">o</span><span class="text-lilac">r</span><span class="text-peach">i</span><span class="text-coral">g</span><span class="text-apricot">i</span><span class="text-pea">n</span><span class="text-baby-blue">a</span><span class="text-lavander">l</span></p>
       <p>Bravo!</p>
-      <p>Où trouves-tu toute cette inspiration ?</p>
+      <p>Où puises-tu ton inspiration ?</p>
       <p>J'espère que tu partages tes découvertes ! </p>
     <% end %>
   <br>
