--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -83,7 +83,7 @@
 
   <section>
       <div id="btn-stats" class="hidden btn rounded w-96 mx-auto -ml-10">
-        <a class="text-green" href="/auth/spotify"><i class="fab fa-spotify text-lg"></i> Découvre toutes tes stats</a>
+        <a class="text-green" href="/stats_final"><i class="fab fa-spotify text-lg"></i> Découvre toutes tes stats</a>
       </div>
   </section>
 
