--- a/app/views/shared/_game.html.erb
+++ b/app/views/shared/_game.html.erb
@@ -1,11 +1,11 @@
 <% jeu1 = @top_tracks[12] %>
 <div class="flex justify-end">
   <div class="flex justify-between w-2/5">
-    <div id="toggle_pick1a" class="hidden flex flex-col items-center hvr-skew-forward p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+    <div id="toggle_pick1a" class="hidden flex flex-col items-center hvr-skew-forward m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
       <p><%= jeu1.name %></p>
       <img src="<%= jeu1.album.images[2]["url"] %>" class="rounded-lg h-20">
     </div>
-    <div id="toggle_pick1b" class="hidden flex flex-col items-center hvr-skew-backward p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+    <div id="toggle_pick1b" class="hidden flex flex-col items-center hvr-skew-backward m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
       <p><%= jeu1.artists[0].name %></p>
       <img src="<%= jeu1.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
@@ -19,11 +19,11 @@
 <% jeu2 = @top_tracks[7] %>
 <div class="flex justify-end">
   <div class="flex justify-between w-2/5">
-    <div id="toggle_pick2a" class="hidden flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+    <div id="toggle_pick2a" class="hidden flex flex-col items-center hvr-wobble-top m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
       <p><%= jeu2.name %></p>
       <img src="<%= jeu2.album.images[2]["url"] %>" class="rounded-lg h-20">
     </div>
-    <div id="toggle_pick2b" class="hidden flex flex-col items-center hvr-wobble-top border-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+    <div id="toggle_pick2b" class="hidden flex flex-col items-center hvr-wobble-top border-2 m-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
       <p><%= jeu2.artists[0].name %></p>
       <img src="<%= jeu2.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
@@ -37,11 +37,11 @@
 <% jeu3 = @top_tracks[18] %>
 <div class="flex justify-end">
   <div class="flex justify-between w-2/5">
-    <div id="toggle_pick3a" class="hidden flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+    <div id="toggle_pick3a" class="hidden flex flex-col items-center hvr-wobble-top m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
       <p><%= jeu3.name %></p>
       <img src="<%= jeu3.album.images[2]["url"] %>" class="rounded-lg h-20">
     </div>
-    <div id="toggle_pick3b" class="hidden flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+    <div id="toggle_pick3b" class="hidden flex flex-col items-center hvr-wobble-top m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
       <p><%= jeu3.artists[0].name %></p>
       <img src="<%= jeu3.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
