--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -11,10 +11,10 @@
     </div>
     <div class="flex justify-end">
       <div class="flex justify-between w-2/5">
-        <div id="toggle_pick0a" class="hidden flex flex-col items-center hvr-wobble-top p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+        <div id="toggle_pick0a" class="hidden flex flex-col items-center hvr-wobble-top m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
           <p>Au top du pop</p>
         </div>
-        <div id="toggle_pick0b" class="hidden flex flex-col items-center hvr-wobble-top border-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
+        <div id="toggle_pick0b" class="hidden flex flex-col items-center hvr-wobble-top m-2 border-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
           <p>Bah.. pas si ouf</p>
         </div>
       </div>
