devise controller & oc

--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -1,7 +1,8 @@
 <div id="contain" class="container overflow-y-scroll h-full mx-auto w-2/3 p-6">
   <section >
     <div id="typewriter1">
-      <h1>Tu veux savoir à quel point ton Spotify est chouette ?</h1>
+      <h1>Hey <%= @name %></h1>
+      <p>Tu veux savoir à quel point ton Spotify est chouette ?</p>
       <p>Attends un poil, que j'analyse un peu tout ça</p>
       <p>Je suis un petit programme d'IA</p>
       <p>Et j'ai pour unique but de mettre un peu de <span class="text-lavander font-bold">douceur</span> dans ta journée</p>
