--- a/app/views/shared/_game.html.erb
+++ b/app/views/shared/_game.html.erb
@@ -32,7 +32,7 @@
 
 <div id="typewriter4" class="hidden">
   <p>Ah ben tiens ! Tout pareil héhé </p>
-  <p>Un ptit dernier pour la route !</p>
+  <p>Un ptit dernier pour la route ?</p>
 </div>
 <% jeu3 = @top_tracks[18] %>
 <div class="flex justify-end">
